Implement Transactions API (sending money)
- Set default user wallet balance to 5 on user signup (for testing purposes)
